--- a/_posts/2026-02-10-ps2-mega-man-x8.md
+++ b/_posts/2026-02-10-ps2-mega-man-x8.md
@@ -1,65 +1,278 @@
 ---
 title: "(PS2) 록맨 X8 (Mega Man X8)"
+description: "PS2 록맨 X8 리뷰 - X7의 실패를 딛고 2.5D로 복귀한 X 시리즈 최종작, 태그 시스템, 8보스 공략, X7 비교, 시리즈 총정리"
 date: 2026-02-10
 categories: [PS2]
 tags: [PS2, action, platformer, RockmanX, MegaManX, Capcom]
 image:
   path: /assets/img/posts/ps2/rockmanx8_thumb.png
-  alt: Mega Man X8 PS2
+  alt: Mega Man X8 PS2 Boxart
 ---
 
-## 📜 록맨 X8 (Mega Man X8 / ロックマンX8)
+## 📜 개요
 
-**록맨 X8**은 캡콤(Capcom)의 **록맨 X(메가맨 X)** 시리즈에 속하는 액션 게임으로, **PS2**에서 즐길 수 있는 작품입니다. 2D 액션 기반의 진행에 3D 연출을 섞어, 스테이지 공략과 보스전의 손맛을 유지하면서도 화면 구성은 좀 더 다채롭게 느껴지는 편입니다.
+**록맨 X8(Mega Man X8)**은 캡콤의 록맨 X 시리즈 **8번째이자 마지막 넘버링 타이틀**입니다. 전작 X7이 풀 3D 전환에 실패하며 시리즈 최악의 평가를 받은 후, X8은 **2.5D(2D 게임플레이 + 3D 그래픽)**로 복귀하여 시리즈의 명예를 회복한 작품입니다.
+
+**태그 시스템**으로 X·제로·액슬 중 2명을 선택하여 실시간 교체하며 플레이하고, 각 스테이지마다 독특한 기믹이 적용된 다채로운 레벨 디자인이 특징입니다.
 
 ---
 
 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
   <img src="/assets/img/posts/ps2/rockmanx8_front.png" alt="록맨 X8 표지">
-  <img src="/assets/img/posts/ps2/rockmanx8_title.jpg" alt="록맨 X8 타이틀">
-  <img src="/assets/img/posts/ps2/rockmanx8_sc1.jpg" alt="록맨 X8 스크린샷1">
-  <img src="/assets/img/posts/ps2/rockmanx8_sc2.jpg" alt="록맨 X8 스크린샷2">
+  <img src="/assets/img/posts/ps2/rockmanx8_title.jpg" alt="록맨 X8 타이틀 화면">
+  <img src="/assets/img/posts/ps2/rockmanx8_sc1.jpg" alt="록맨 X8 게임 플레이">
+  <img src="/assets/img/posts/ps2/rockmanx8_sc2.jpg" alt="록맨 X8 보스전">
 </div>
-
-## 📅 출시 정보
-- 플랫폼: **PlayStation 2 (PS2)**
-- 개발/발매: **캡콤(Capcom)**
 
 ---
 
-## 🛠️ 핵심 시스템
+## 📅 출시 정보
 
-1. **스테이지 선택형 진행**  
-   시리즈 전통처럼 여러 스테이지 중 하나를 골라 공략하고, 보스전까지 돌파하는 구조입니다.
+| 항목 | 내용 |
+|------|------|
+| **플랫폼** | PlayStation 2 / PC |
+| **장르** | 2D 액션 플랫포머 (2.5D) |
+| **개발/배급** | Capcom |
+| **출시일** | 2004년 12월 7일 (북미) / 2005년 3월 10일 (일본) |
+| **Legacy Collection** | Mega Man X Legacy Collection 2 (2018, PS4/Switch/Xbox One/Steam) 수록 |
 
-2. **캐릭터 운용(교체/조합의 재미)**  
-   X 시리즈 특유의 캐릭터별 성격이 달라서, 상황에 따라 플레이 감각이 달라집니다.
+---
 
-3. **업그레이드/성장 요소**  
-   진행 중 얻는 강화 요소가 있어, 반복 플레이의 동기를 만들어줍니다.
+## 📖 록맨 X 시리즈 (X1~X8)
+
+| 작품 | 연도 | 플랫폼 | 특징 | 평가 |
+|------|------|--------|------|------|
+| **X** | 1993 | SNES | 시리즈 원점, 월점프·대시·아머 도입 | 명작 |
+| **X2** | 1994 | SNES | X1 완성형, X헌터 시스템 | 명작 |
+| **X3** | 1995 | SNES/PS1 | 제로 첫 조작 가능 (제한적) | 호평 |
+| **X4** | 1997 | PS1/Saturn | 32비트 전환, 제로 독립 스토리 | **시리즈 최고작 후보** |
+| **X5** | 2000 | PS1 | 이나후네 의도의 시리즈 최종작 | 호평 |
+| **X6** | 2001 | PS1 | 이나후네 불참, 레벨 디자인 논란 | 혹평 |
+| **X7** | 2003 | PS2 | **풀 3D 실패작**, 메타크리틱 58 | **시리즈 최악** |
+| **X8** | 2004 | PS2/PC | **2.5D 복귀, 태그 시스템** | 회복 (메타크리틱 68) |
+
+X8은 2026년 현재까지 **X 시리즈 마지막 넘버링 타이틀**이며, X9는 발표되지 않았습니다.
+
+---
+
+## ⚠️ X7의 실패와 X8의 복귀
+
+X8을 이해하려면 전작 X7의 참사를 알아야 합니다.
+
+| X7의 문제점 | X8의 해결 |
+|------------|----------|
+| 풀 3D 전환 → 카메라·조작 엉망 | **2.5D 복귀** (2D 게임플레이 + 3D 그래픽) |
+| X가 잠금 (보스 8체 격파 또는 레플리로이드 64명 구출 후 해금) | **X 처음부터 사용 가능** |
+| 최악의 영어 더빙 ("BURN! BURN! BURN TO THE GROUND!") | **성우 연기 대폭 개선** |
+| 느리고 지루한 게임플레이 | **빠른 템포, 자연스러운 움직임** |
+| 밋밋한 스테이지 디자인 | **스테이지마다 고유 기믹** |
+| 보스전이 단순한 체력 깎기 | 보스전 페이싱 개선 |
+
+---
+
+## 🎮 플레이어블 캐릭터 & 태그 시스템
+
+3명 중 **2명을 선택**하여 스테이지에 투입하고, 실시간으로 교체하며 플레이합니다.
+
+### 엑스 (X) - 밸런스 / 원거리
+
+| 요소 | 설명 |
+|------|------|
+| **X버스터** | 차지 샷으로 강력한 원거리 공격 |
+| **보스 무기** | 보스 격파 시 특수 무기 획득 (8종) |
+| **아머 시스템** | 이카로스·헤르메스·얼티메이트 아머 장착 |
+
+### 제로 (Zero) - 근접 / 콤보
+
+| 요소 | 설명 |
+|------|------|
+| **Z세이버** | 근접 콤보 중심 전투 |
+| **보스 기술** | 보스 격파 시 기술 습득 (지상/공중/대시 등 상황별 발동) |
+| **추가 무기** | 레어 메탈로 해금 (해머, 팬 등), 무기별로 8개 기술 형태 변화 |
+
+### 액슬 (Axl) - 연사 / 카피
+
+| 요소 | 설명 |
+|------|------|
+| **연사** | 빠른 연사 + 다방향 조준 |
+| **카피 샷** | 적에게 카피 샷 적중 → DNA 캡슐 → **적으로 변신(A-Trans)** |
+| **호버** | 공중에서 수평 활공 가능 |
+| **보스 무기** | 무기 에너지 소모 없음 (큰 장점) |
+
+### 태그 시스템
+
+| 기능 | 설명 |
+|------|------|
+| **실시간 교체** | 언제든 파트너와 교체 |
+| **태그 리커버리** | 대기 중인 캐릭터가 체력 자동 회복 |
+| **태그 어시스트** | 적에게 잡히면 대기 캐릭터가 난입 구출 |
+| **더블 어택** | 어택 게이지 충전 시 두 캐릭터 동시 공격 (화면 전체) |
+| **EXF (Extra Finish)** | 보스전 전용 강화 더블 어택 |
+
+### 네비게이터 → 히든 캐릭터
+
+| 네비게이터 | 대응 캐릭터 | 해금 조건 |
+|-----------|-----------|----------|
+| **에일리아(Alia)** | X 타입 | 가장 많이 선택한 상태로 클리어 |
+| **레이어(Layer)** | Zero 타입 | 가장 많이 선택한 상태로 클리어 |
+| **팔레트(Pallette)** | Axl 타입 | 가장 많이 선택한 상태로 클리어 |
+
+메인 시리즈 최초의 **여성 플레이어블 캐릭터**입니다.
+
+---
+
+## 👾 8보스 (매버릭)
+
+| 보스 | 모티프 | 스테이지 | X 무기 | Zero 기술 |
+|------|--------|---------|--------|----------|
+| **밤부 판데모니엄** | 팬더 | Booster Forest | Green Spinner | 요우단토츠 |
+| **옵틱 선플라워** | 해바라기 | Troia Base | Shining Ray | 텐쇼하 |
+| **다크 맨티스** | 사마귀 | Pitch Black | Shadow Runner | 라세츠센 |
+| **그래비티 안토니온** | 개미 | Primrose | Squeeze Bomb | 쥬하잔 |
+| **어스록 트릴로바이트** | 삼엽충 | Metal Valley | Crystal Wall | 렛쿄단 |
+| **기가볼트 맨오워** | 해파리 | Dynasty | Thunder Dancer | 라이코센 |
+| **아발란치 예티** | 설인 | Central White | Drift Diamond | 효류쇼 |
+| **번 루스터** | 수탉 | Inferno | Melt Creeper | 엔코진 |
+
+### 약점 순환 (추천 공략 순서)
+
+밤부 판데모니엄 → 옵틱 선플라워 → 다크 맨티스 → 아발란치 예티 → 번 루스터 → 그래비티 안토니온 → 어스록 트릴로바이트 → 기가볼트 맨오워 → (처음으로)
+
+특히 어스록 트릴로바이트는 약점 무기(Squeeze Bomb)에 맞으면 **갑옷이 완전히 파괴**되어 무방비 상태가 됩니다.
+
+---
+
+## 🗺️ 스테이지 구성
+
+X8의 각 스테이지는 **고유한 중심 기믹**을 가지고 있어, 같은 2D 액션이라도 스테이지마다 전혀 다른 경험을 제공합니다.
+
+| 스테이지 | 기믹 | 설명 |
+|---------|------|------|
+| Noah's Park | 오프닝 | 튜토리얼 스테이지 |
+| **Booster Forest** | 라이드 아머 | 라이드 아머를 타고 진행 |
+| **Troia Base** | 가상 훈련 | 8개 미니 챌린지, 성적에 따라 난이도 변동 |
+| **Pitch Black** | 스텔스/어둠 | 암흑 속 보안 시스템과 함정 |
+| **Primrose** | 중력 퍼즐 | 중력 스위치로 방 전체가 90°/180° 회전 |
+| **Metal Valley** | 라이드 체이서 | 고속 바이크 레이싱 |
+| **Dynasty** | 레일 슈팅 | 라이드 체이서 시리우스를 타고 슈팅 |
+| **Central White** | 라이드 체이서 | 자동 스크롤 + 미니보스 |
+| **Inferno** | 수직 오토스크롤 | 위로 올라가며 진행 |
+| Jakob | 엘리베이터 | 궤도 엘리베이터 상승 전투 |
+| Gateway | 보스 러시 | 8보스 재전 |
+| Sigma Palace | 최종 | 달 위의 궁전, 시그마 + 루미네 |
+
+---
+
+## ⚙️ 게임 시스템
+
+### 메탈(Metals) & R&D 연구소
+
+적을 처치하거나 오브젝트를 파괴하면 **메탈(통화)**을 획득합니다. 헌터 베이스의 **R&D 연구소**에서 업그레이드를 구매하는 데 사용합니다.
+
+기존 X 시리즈에서 스테이지 안에 숨겨져 있던 **하트 탱크, 서브 탱크**도 R&D 연구소에서 메탈로 구매하는 방식으로 변경되었습니다.
+
+### X의 아머 시스템
+
+| 아머 | 특징 |
+|------|------|
+| **이카로스 아머** (빨간 빛) | 공격·방어 특화, 피격 대미지 절반, 넉백 제거 |
+| **헤르메스 아머** (파란 빛) | 속도·기동성 특화, 이동·대시 속도 2배, 대시 중 무적 |
+| **얼티메이트 아머** (검정+보라) | 히든 아머, 이카로스+헤르메스 능력 통합 |
+| **뉴트럴(혼합)** | I·H 파츠 자유 조합 가능 (기가 어택 사용 불가) |
+
+### 리트라이 칩
+
+| 항목 | 설명 |
+|------|------|
+| 초기 보유 | 2개 |
+| 최대 보유 | 5개 |
+| 소진 시 | 스테이지 처음부터 재시작 (수집 아이템은 유지) |
+
+실질적인 **난이도 조절 장치**로 기능합니다.
+
+---
+
+## 📖 스토리
+
+### 배경
+
+매버릭 사건이 끝나지 않는 가운데, 인류는 달 식민지를 위한 **야콥 궤도 엘리베이터** 건설 프로젝트를 시작합니다. 이를 위해 개발된 **신세대 레플리로이드**는 카피 칩을 내장하여 자유롭게 형태를 바꿀 수 있으며, 매버릭화를 방지하는 서브루틴이 탑재되었다고 알려져 있습니다.
+
+야콥 프로젝트 책임자 **루미네(Lumine)**가 바일에게 납치되고, 8체의 신세대 레플리로이드가 매버릭화하면서 사건이 시작됩니다.
+
+### 반전: 루미네의 정체
+
+- 시그마 격파 후, **루미네가 진정한 흑막**임이 드러남
+- 모든 신세대 레플리로이드의 카피 칩에 **시그마의 DNA 데이터**가 포함되어 있었음
+- 루미네의 주장: 신세대 레플리로이드는 진화의 다음 단계이며, 인간과 구세대 레플리로이드는 도태되어야 한다
+- 루미네를 격파하지만, 잔해에서 튀어나온 촉수가 **액슬의 머리 크리스탈을 파손** → 의식 불명
+- **미해결 엔딩**: X9가 발매되지 않아 시리즈의 마지막 장면으로 남음
+
+---
+
+## 🔄 X7 vs X8 상세 비교
+
+| 항목 | X7 (2003) | X8 (2004) |
+|------|----------|----------|
+| **시점** | 풀 3D (카메라 파탄) | **2.5D** (2D 게임플레이 + 3D 그래픽) |
+| **X 해금** | 조건 충족 후 해금 | **처음부터 사용 가능** |
+| **게임 속도** | 느림, "빙판 위 스케이팅" 같은 이동 | **빠른 템포, 자연스러운 이동감** |
+| **성우** | 최악의 영어 더빙 | **수준급 연기** |
+| **스테이지** | 밋밋, 3D 공간에서 적을 무시하고 통과 가능 | **스테이지별 고유 기믹** |
+| **보스전** | 데미지 스펀지, 지루함 | 페이싱 개선, 약점 활용 전략 |
+| **태그** | 없음 (캐릭터 선택만) | **실시간 교체 + 더블 어택** |
+| **메타크리틱** | **58점** | **68점** |
+| **유저 평가** | 4.9/10 | 대폭 개선 |
+
+---
+
+## 📊 평가
+
+| 매체 | 점수 |
+|------|------|
+| **메타크리틱** | **68점** (Mixed or Average) |
+| IGN | 약 7.0 |
+| GameSpot | 약 6.0 |
+
+> *"올드스쿨 팬들은 기뻐할 것이고, 새로운 세대도 왜 록맨이 대단한지 이해하게 될 것이다"* — Game Informer
+
+**호평**: 2.5D 복귀, 성우 개선, 태그 시스템의 전략성, 스테이지별 다양한 기믹, X7 대비 전방위적 개선
+
+**비판**: SNES 시대 X 시리즈의 정점에는 미치지 못함, 일부 스테이지 기믹의 호불호(옵틱 선플라워 훈련 시뮬레이션), 스토리 전개
+
+### 판매
+
+일본 첫 주 약 15,000장, 총 약 35,500장(일본). 전작 X7보다 평가는 나았으나 상업적 성과는 저조하여, X 시리즈는 이후 휴면 상태에 들어갔습니다.
 
 ---
 
 ## 🎨 그래픽·사운드
 
-- **그래픽**: 2D 액션을 중심으로 하되, PS2 세대에 맞춰 연출과 카메라 구성이 한층 화려해진 느낌을 줍니다.
-- **사운드**: 전투 템포를 끌어올리는 곡들이 많아, 스테이지 분위기와 액션 리듬을 잘 받쳐줍니다.
+- **그래픽**: 3D 모델로 그려진 캐릭터와 배경이 2D 게임플레이 위에서 자연스럽게 작동합니다. X7에서 "빙판 위를 미끄러지는 듯"했던 캐릭터 모션이 X8에서는 무게감 있게 개선되었습니다. 스테이지 간 카메라 전환도 IGN이 "seamless"라 평할 정도로 매끄럽습니다.
+- **사운드**: 전투 템포를 끌어올리는 록 기반 BGM이 시리즈 전통을 이어갑니다. X7에서 최대 오점이었던 영어 성우 연기가 X8에서 "처음으로 진지하게 좋다고 말할 수 있는 수준"으로 개선되었습니다.
 
 ---
 
 ## 🎯 추천 포인트
 
-1. **PS2로 즐기는 록맨 X 시리즈**  
-   X 시리즈 팬이라면 자연스럽게 손이 가는 ‘정통 액션’의 매력이 있습니다.
-
-2. **스테이지 공략형 액션의 쾌감**  
-   짧게 한 스테이지씩 끊어 즐기기 좋아, 부담 없이 플레이하기 좋습니다.
-
-3. **캡콤식 액션의 손맛**  
-   공격·이동·회피가 리드미컬하게 맞물리는 타입의 액션을 좋아하면 만족도가 높습니다.
+1. X7에 실망한 후 **시리즈에 대한 신뢰를 되찾고 싶은** X 시리즈 팬
+2. **태그 교체**로 전략적 2D 액션을 즐기고 싶은 경우
+3. 스테이지마다 **라이드 체이서·중력 퍼즐·스텔스** 등 다양한 기믹을 원하는 경우
+4. X 시리즈의 **마지막 이야기**가 어떻게 끝나는지 확인하고 싶은 경우
 
 ---
 
-## 🚀 맺음말
+## 🎮 플레이 후기
 
-『록맨 X8』은 **PS2**에서 즐길 수 있는 록맨 X 계열 액션 게임으로, 스테이지 공략과 보스전 중심의 구조가 깔끔하게 살아 있습니다. 클래식한 액션 게임을 찾고 있거나, X 시리즈를 이어서 즐기고 싶다면 한 번 꺼내볼 만한 작품입니다.
+X7이라는 시리즈 최악의 위기 이후, X8은 "이래서 록맨 X가 록맨 X다"라는 것을 다시 증명한 작품입니다. 2.5D 복귀는 정답이었고, 태그 시스템으로 X·제로·액슬의 개성을 실시간으로 활용하는 재미가 있습니다. 특히 제로의 근접 콤보와 액슬의 카피 변신은 스테이지 재도전 동기를 만들어줍니다.
+
+다만 SNES 시대 X1·X4의 완성도에는 미치지 못합니다. 일부 스테이지 기믹(옵틱 선플라워의 미니게임 연속, 라이드 체이서 강제 구간)은 호불호가 갈리고, 스토리도 루미네의 반전 이후 급하게 마무리되는 느낌입니다. 그리고 이것이 시리즈의 마지막이라는 점이 아쉬움을 더합니다 — 액슬의 크리스탈이 파손된 채 끝나는 미해결 엔딩은 20년이 지난 지금까지도 후속작을 기다리게 만듭니다.
+
+---
+
+## 🔗 참고 링크
+
+- [Mega Man X8 - Wikipedia](https://en.wikipedia.org/wiki/Mega_Man_X8)
+- [Mega Man X8 - MMKB Fandom](https://megaman.fandom.com/wiki/Mega_Man_X8)
+- [Mega Man X8 - Metacritic](https://www.metacritic.com/game/mega-man-x8/)
+- [Mega Man X Legacy Collection 2 - Wikipedia](https://en.wikipedia.org/wiki/Mega_Man_X_Legacy_Collection)
