--- a/_posts/2026-02-15-wii-nba-2k13.md
+++ b/_posts/2026-02-15-wii-nba-2k13.md
@@ -1,5 +1,6 @@
 ---
 title: "(Wii) NBA 2K13 (NBA 2K13)"
+published: false
 date: 2026-02-15
 categories: [Wii]
 tags: [Wii, sports, basketball, nba_2k]
