--- a/_posts/2026-02-16-ps2-disgaea.md
+++ b/_posts/2026-02-16-ps2-disgaea.md
@@ -1,5 +1,6 @@
 ---
 title: "(PS2) 디스가이아 (Disgaea: Hour of Darkness)"
+published: false
 date: 2026-02-16
 categories: [PS2]
 tags: [PS2, SRPG, 전략RPG, Disgaea, 니폰이치]
