--- a/_posts/2026-02-16-ps2-disgaea.md
+++ b/_posts/2026-02-16-ps2-disgaea.md
@@ -1,51 +1,202 @@
 ---
-title: "(PS2) 디스가이아 (Disgaea: Hour of Darkness)"
-published: false
+title: "(PS2) 디스가이아 마계전기 (Disgaea: Hour of Darkness)"
+description: "PS2 디스가이아 리뷰. 아이템 월드·전생 시스템·지오 패널 등 핵심 시스템, 다른 SRPG와의 비교, 레벨 9999·억 단위 데미지의 폐인 양성 게임 후기까지 정리합니다."
+published: true
 date: 2026-02-16
 categories: [PS2]
-tags: [PS2, SRPG, 전략RPG, Disgaea, 니폰이치]
+tags: [PS2, SRPG, Disgaea, Nippon Ichi, 전략RPG]
+image:
+  path: /assets/img/posts/ps2/disgaea_thumb.webp
+  alt: Disgaea Hour of Darkness PS2 Boxart
+  lqip: data:image/webp;base64,...
 ---
 
-## 📜 디스가이아 (Disgaea: Hour of Darkness)
+## 📜 디스가이아 마계전기 개요
 
-**디스가이아**는(은) **PS2**로 출시된 **전략 롤플레잉(SRPG)** 게임입니다. 턴제 전투에서 유닛을 배치·이동해 적을 격파하는 기본 틀 위에, 과장된 수치 성장과 다양한 시스템을 얹어 ‘파고들기’ 재미가 강한 작품으로 알려져 있습니다.
+<div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
+  <img src="/assets/img/posts/ps2/disgaea_front.webp" alt="디스가이아 PS2 표지">
+  <img src="/assets/img/posts/ps2/disgaea_title.jpg" alt="디스가이아 PS2 타이틀">
+  <img src="/assets/img/posts/ps2/disgaea__sc1.jpg" alt="디스가이아 PS2 스크린샷1">
+  <img src="/assets/img/posts/ps2/disgaea_sc2.jpg" alt="디스가이아 PS2 스크린샷2">
+</div>
 
----
+디스가이아: 마계전기(Disgaea: Hour of Darkness)는 2003년 닛폰이치 소프트웨어가 개발한 PS2용 SRPG입니다. 메인 스토리는 20~30시간이면 끝나지만, 진짜 게임은 **그 뒤부터 시작**됩니다. 레벨 상한 9999, 억 단위를 넘는 데미지, 아이템 안에 들어가는 무한 던전, 전생을 반복하며 스탯을 쌓아올리는 시스템 — 일본에서 "폐인 양성 게임"이라는 별명이 붙은 데는 이유가 있습니다.
 
-## 📅 출시 정보
-
-- **플랫폼**: PS2
-
----
-
-## 🛠️ 핵심 시스템
-
-1. **격자 기반 턴제 SRPG 전투**  
-   이동/공격 범위를 계산해 아군 유닛을 운용하고, 스킬·마법을 조합해 전장을 유리하게 만드는 구조입니다.
-
-2. **들기/던지기(Throw) 같은 전술 변수**  
-   유닛을 들어 올려 던지는 식의 기믹을 활용해 지형을 넘어 이동하거나, 적의 배치를 흔드는 등 전투의 선택지가 넓어집니다.
-
-3. **강화·성장에 집중된 ‘끝없이’ 올리는 플레이 감각**  
-   레벨업·장비 강화·반복 플레이 요소가 촘촘해서, 한 번 재미가 붙으면 캐릭터를 극한까지 키우는 방향으로 자연스럽게 이어집니다.
+메타크리틱 84점, IGN 선정 "Best Game No One Played" 2003. 이 게임의 성공으로 닛폰이치는 미국 법인 NIS America를 설립했고, 디스가이아는 시리즈 누적 500만 장 이상 판매된 회사의 간판 프랜차이즈가 되었습니다.
 
 ---
 
-## 🎨 그래픽·사운드
+## 📅 디스가이아 출시 정보
 
-- **그래픽**: 2D 감성의 캐릭터 표현과 SRPG 특유의 시인성 중심 화면 구성이 어울립니다.
-- **사운드**: 전투 템포를 살리는 BGM과 연출이 중심이며, 스테이지 진행을 끊지 않게 구성된 편입니다.
+| 항목 | 내용 |
+| --- | --- |
+| 플랫폼 | PS2 (이후 PSP, DS, PC, PS4, Switch, 모바일 이식) |
+| 발매일 | 일본 2003.01.30 / 북미 2003.08.27 / 유럽 2004.05.28 |
+| 개발 | 닛폰이치 소프트웨어 |
+| 퍼블리셔 | 일본: 닛폰이치 / 북미: 아틀라스 / 유럽: 코에이 |
+| 프로듀서·시나리오 | 니이카와 소헤이 |
+| 캐릭터 디자인 | 하라다 타케히토 |
+| 음악 | 사토 텐페이 |
+| 메타크리틱 | **84/100** |
 
 ---
 
-## 🎯 추천 포인트
+## 🔄 디스가이아 vs 다른 SRPG — 무엇이 다른가?
 
-- 턴제 전술과 캐릭터 육성을 함께 즐기는 **SRPG 팬**
-- 한 판씩 깔끔하게 끊기면서도, 성장 파트에서 **깊게 파고들 수 있는 게임**을 찾는 분
-- 시스템을 활용해 ‘정답’이 아니라 **자기만의 운영**을 만들어가는 재미를 좋아하는 분
+디스가이아를 파이널 판타지 택틱스나 파이어 엠블렘과 같은 SRPG로 보면 혼란스럽습니다. 장르만 같고 **설계 철학이 완전히 다릅니다**.
+
+| 구분 | FFT / 택틱스 오우거 | 파이어 엠블렘 | **디스가이아** |
+| --- | --- | --- | --- |
+| 스토리 톤 | 정치극, 비극 | 서사, 전쟁 드라마 | **코미디, RPG 패러디** |
+| 레벨 상한 | 99 | 20~40 | **9999** |
+| 데미지 규모 | 수백~수천 | 수십 | **수억~수십억** |
+| 캐릭터 사망 | 영구사망(일부) | 영구사망 | **없음 (자유 생성·전생)** |
+| 클리어 후 콘텐츠 | 거의 없음 | 거의 없음 | **본편의 5~10배** |
+| 핵심 재미 | 전술적 깊이 | 유닛 관리·스토리 | **숫자 폭주 + 시스템 악용** |
+
+FFT가 체스라면, 디스가이아는 **체스판 위에서 핵을 터뜨리는 게임**입니다. 전술적 깊이보다 시스템을 이해하고 그 한계를 깨부수는 데서 쾌감이 옵니다.
+
+### 닛폰이치 이전작과의 비교
+디스가이아 이전 닛폰이치의 SRPG는 랩소디(1998, PS1)와 라 퓌셀(2002, PS2)이 있었습니다. 랩소디는 뮤지컬 RPG라는 독특한 컨셉이었지만 전투가 너무 단순했고, 라 퓌셀은 그리드 기반 SRPG로 디스가이아의 프로토타입 격이지만 "숫자 폭주"의 매력은 없었습니다. 디스가이아가 이전작들과 결정적으로 다른 건 **"끝이 없다"는 설계** 자체입니다.
 
 ---
 
-## 🚀 맺음말
+## 📖 디스가이아 스토리
 
-**디스가이아**는(은) PS2 SRPG 중에서도 ‘키우고, 굴리고, 더 키우는’ 쪽의 재미가 강한 타입입니다. 가볍게 스테이지를 밀어도 좋고, 시스템에 익숙해질수록 빌드·전술 선택지가 늘어나서 오래 붙들기에도 좋은 편이라, 전술 게임에 성장 중독(?)을 더하고 싶은 분께 잘 맞습니다.
+### 주요 캐릭터
+- **라하르**: 마계 대마왕의 아들. 2년간 잠자다 깨어나 보니 아버지가 사망(목에 프레첼이 걸려서). 자칭 차기 대마왕. 오만하지만 본심은 착한 전형적인 츤데레 악마
+- **에트나**: 라하르의 부하. 프린니 부대를 이끌며 자기 이익만 챙기는 듯하지만, 선대 대마왕과의 약속을 지키고 있음
+- **플론**: 천계에서 파견된 천사 수습생. "사랑 만능주의자". 악마도 사랑할 수 있다고 믿으며 라하르의 감성을 흔듦
+
+스토리는 RPG 클리셰를 **의도적으로 비트는** 코미디입니다. 자칭 "다크 아도니스" 미드보스, "지구 방위대장" 고든 등 개그 캐릭터가 등장하고, 프린니(폭발하는 펭귄)가 마스코트 역할을 합니다. 결말은 플레이 방식에 따라 **8개 이상의 멀티 엔딩**으로 분기합니다.
+
+---
+
+## ⚙️ 디스가이아 핵심 시스템
+
+### 1. 지오 패널 & 지오 심볼
+전투 맵의 색칠된 패널에 지오 심볼(오브젝트)이 놓이면 **해당 색 패널 전체에 효과** 부여(공격력+50%, 적 강화, 무적, 매턴 HP-20% 등). 심볼을 파괴하면 같은 색 패널이 변하면서 위에 있는 유닛에게 데미지. 연쇄 파괴로 **콤보 보너스**를 극대화하는 것이 핵심입니다. 전투 안의 퍼즐 게임.
+
+### 2. 들기 & 던지기
+모든 캐릭터가 인접한 유닛(아군, 적, 오브젝트)을 들어서 던질 수 있습니다.
+- 아군을 던져 이동 불가 지형 너머로 보내기
+- **프린니를 던지면 폭발** → 범위 데미지
+- 적을 적에게 던지면 **합체** (높은 레벨이 낮은 레벨을 흡수)
+- 들고 있는 캐릭터 위에 또 올리면 **타워 형성** → 맵 전체 사거리 던지기
+
+### 3. 아이템 월드 — 중독의 핵심 엔진
+**모든 아이템 안에 랜덤 생성 던전이 존재합니다.** 일반 아이템 30층, 레어 60층, 레전더리 100층. 층을 클리어할수록 아이템 스탯이 올라갑니다. 안에서 발견한 아이템도 자체 아이템 월드가 있습니다. **던전 안의 던전 안의 던전.** "한 층만 더"를 반복하다 밤을 새우는 시스템입니다.
+
+- **스페셜리스트**: 아이템 내부 주민. 격파하면 "복종"시켜 스탯 보너스 2배, 다른 아이템으로 이동 가능
+- **10층마다 아이템 장군/왕/신** 보스 등장 → 추가 스탯 보너스
+- **탈출**: 10층마다 차원 게이트 또는 긴급 탈출 아이템 사용
+
+### 4. 암흑의회 (다크 어셈블리)
+마계의 **악마 의회**에 법안을 제출하는 시스템. 캐릭터 생성, 새 맵 해금, 상점 업그레이드, 적 강화 등을 제안합니다. 의원들에게 아이템으로 **뇌물**을 주거나, 부결 시 **무력으로 통과**시킬 수도 있습니다. "적 강화" 법안을 여러 번 통과시키면 적 레벨이 올라가 경험치·드랍이 좋아집니다.
+
+### 5. 전생 (환생/트랜스미그레이션)
+캐릭터를 **레벨 1로 초기화**하는 대신, 축적된 레벨에 비례한 **기본 스탯 보너스**를 받습니다.
+- 레벨 9999 → 전생 → 레벨 1(보너스 스탯 보유) → 다시 9999까지 → 전생 반복
+- 전생 시 등급 선택: 천재(Genius)일수록 마나 소모 많지만 무기 숙련도·스킬 95% 유지
+- **이 루프가 스탯을 천만 단위까지 끌어올리는 핵심**
+
+### 6. 캐릭터 생성·클래스
+전사, 격투가, 마법사, 도적, 궁수, 성직자 등 다수의 인간형 클래스 + 몬스터 클래스. 각 클래스 6단계 티어. 닌자, 사무라이, 마진 등 숨겨진 클래스는 특정 조건 충족 시 해금.
+
+---
+
+## 😈 디스가이아 — 왜 "폐인 양성 게임"인가
+
+이 게임이 인생을 집어삼키는 구조는 다음과 같습니다.
+
+| 요소 | 내용 |
+| --- | --- |
+| 메인 스토리 | 20~30시간이면 끝 ← **이건 튜토리얼** |
+| 클리어 후 콘텐츠 | 히든 보스, 추가 스테이지, 멀티 엔딩 → **100~500시간+** |
+| 레벨 상한 | 9999. 도달해도 전생하면 다시 1부터 |
+| 스탯 상한 | **수천만**. 전생 반복으로 도달 |
+| 데미지 | **억~수십억** 단위. 화면이 숫자로 도배됨 |
+| 아이템 월드 | 모든 아이템에 최대 100층 던전. 끝이 없음 |
+| 적 강화 법안 | 자발적으로 적을 강하게 만들어 보상 증가 → 무한 난이도 스파이럴 |
+| 최종 보스 바알 | 레벨 4000. 공격력 10만+ 필요. 준비만 수십 시간 |
+
+FFT의 최종 목표가 "스토리 완주"라면, 디스가이아의 최종 목표는 **"숫자의 끝을 보는 것"**입니다. 그리고 그 끝은 사실상 없습니다.
+
+### 클리어 후 해금 콘텐츠
+- **프리에르** (라 퓌셀 출연): 레벨 2000. 격파 시 파티 합류
+- **마졸리** (랩소디/마르 왕국 출연): 레벨 2500. 격파 시 파티 합류
+- **바알** (공포의 대마왕): 레벨 4000. 슈퍼 로봇 슈트 장비 (유일한 입수법: 도둑질)
+- 인간계 추가 스테이지, 뉴게임+ (레벨·장비 인계)
+
+---
+
+## 🐧 프린니 — 디스가이아의 마스코트
+
+프린니는 생전 죄를 지은 영혼이 펭귄 모습으로 환생한 존재입니다. 말끝에 "ッス(-ssu)"를 붙이고(영문판은 "dood!"), **던지면 폭발**합니다. 캐릭터 디자이너 하라다 타케히토가 "생각을 읽을 수 없는 캐릭터"를 목표로 디자인했으며, 닛폰이치의 공식 마스코트가 되어 자체 스핀오프 게임(프린니: 내가 주인공이 되어도 되는 거야?, 2008)까지 나왔습니다.
+
+---
+
+## 💡 디스가이아 공략 팁
+
+### 초반 육성 전략
+- 메인 스토리는 라하르 + 에트나 + 플론 중심으로 진행하면 충분
+- 초반에 **전사·마법사·도적** 1명씩 생성해두면 중반부터 편해짐
+- 도적의 **스틸(도둑질)** 스킬은 보스 아이템 획득에 필수 — 반드시 키울 것
+
+### 지오 패널 활용
+- 적에게 유리한 지오 심볼은 우선 파괴 (무적 패널 위 적은 절대 못 잡음)
+- 연쇄 파괴 콤보로 보너스 게이지 극대화 → 클리어 보상 대폭 증가
+- **패널 전멸 보너스**: 맵의 모든 색 패널을 제거하면 최대 보상
+
+### 아이템 월드 팁
+- 처음에는 레전더리 등급 무기부터 진입 (100층, 성장량 최대)
+- 10층마다 나오는 보스는 가능하면 격파 → 아이템 스탯 추가 상승
+- 긴급 탈출 아이템(Mr. Gency Exit)은 항상 여유분 확보
+- 스페셜리스트를 복종시킨 후 주력 장비로 이동 → 스탯 집중
+
+### 전생 가이드
+- 첫 전생은 레벨 100 이상일 때. "천재" 등급 선택 추천 (마나 많이 소모되지만 효율 최고)
+- 전생 후 레벨링은 아이템 월드에서 하는 게 가장 빠름
+- 바알 도전 준비: 공격력 10만 이상, 가능하면 20만 이상 권장. 전생 최소 3~4회 필요
+
+### 암흑의회 활용
+- "적 강화" 법안을 반복 통과 → 적 레벨 상승 → 경험치 효율 증가
+- 고랭크 의원에게 **레전더리 장비 뇌물** → 승인률 대폭 상승
+- 부결 시 "무력 통과"도 가능하지만 의원 레벨이 높으면 위험
+
+---
+
+## 📱 디스가이아 이식·리메이크 버전
+
+| 버전 | 플랫폼 | 연도 | 특징 |
+| --- | --- | --- | --- |
+| 오리지널 | PS2 | 2003 | 원작 |
+| Afternoon of Darkness | PSP | 2006 | 16:9 와이드, **에트나 모드** 추가, 일/영 음성 전환 |
+| Disgaea DS | NDS | 2008 | 듀얼 스크린 지원. 음성 일부 삭제 |
+| Disgaea PC | Steam | 2016 | PSP판 기반 PC 이식 |
+| **Disgaea 1 Complete** | **PS4/Switch** | **2018** | **HD 리마스터**. 스프라이트 전면 리드로잉, PSP 콘텐츠 포함 |
+| Disgaea 1 Complete | iOS/Android | 2020 | 오토 배틀, 8배속, 치트샵 추가 |
+
+**추천 버전**: Switch의 Disgaea 1 Complete. HD 그래픽 + 전 콘텐츠 + 휴대성.
+
+---
+
+## 🎮 디스가이아 플레이 후기
+
+디스가이아가 폐인 양성 게임이라는 건 과장이 아니다. 메인 스토리는 코미디 SRPG로 가볍게 즐길 수 있고, 라하르·에트나·플론의 캐릭터 매력도 충분해서 20시간쯤 되면 한 편의 개그 애니메이션을 본 기분으로 엔딩 크레딧을 보게 된다. 여기서 끝내면 "괜찮은 SRPG였다"로 마무리되는데, 문제는 여기서 끝나지 않는다.
+
+클리어 후 암흑의회에서 "적 강화" 법안을 통과시키고, 아이템 월드에 들어가 "한 층만 더" 하다 보면 시간 감각이 사라진다. 레벨 9999를 찍고 전생해서 다시 1부터 키우는 게 고통이 아니라 쾌감이 되는 순간이 온다. 데미지가 만 단위에서 억 단위로 올라가는 걸 보면 "아 이래서 이 게임을 하는구나" 싶어진다. FFT에서 느끼는 전술적 만족감과는 차원이 다른, **숫자 자체가 엔터테인먼트**인 게임이다.
+
+솔직히 이 게임을 100% 클리어한 사람은 극소수일 것이다. 바알을 잡고, 모든 캐릭터를 전생 극한까지 키우고, 모든 레전더리 아이템의 아이템 월드를 100층까지 클리어하려면 수백 시간이 필요하다. 하지만 그게 이 게임의 매력이다. 끝이 보이지 않는다는 건 **아직 할 게 남아있다**는 뜻이니까.
+
+SRPG를 좋아하면서 "한 게임을 오래 파고싶다"는 사람에게 이보다 나은 선택지는 거의 없다. 다만 인생이 사라질 각오는 해야 한다.
+
+---
+
+## 🔗 디스가이아 참고 링크
+
+- [Disgaea: Hour of Darkness - Disgaea Wiki (Fandom)](https://disgaea.fandom.com/wiki/Disgaea:_Hour_of_Darkness)
+- [Disgaea 아이템 월드 가이드 - Disgaea Wiki](https://disgaea.fandom.com/wiki/Item_World)
+- [Disgaea 전생 시스템 가이드 - Disgaea Wiki](https://disgaea.fandom.com/wiki/Reincarnation_(Term))
+- [Disgaea 지오 패널 가이드 - StrategyWiki](https://strategywiki.org/wiki/Disgaea:_Hour_of_Darkness/Geo_Panels)
+- [Disgaea: Hour of Darkness - Wikipedia](https://en.wikipedia.org/wiki/Disgaea:_Hour_of_Darkness)
